syntax = "proto3";

package Blocksettle.BS_MD.TradeHistoryServer;

message PriceInfo
{
   double price = 1;
   uint64 timestamp = 2;
};

enum UpdateType
{
   FullSnapshotType        = 0;
   IncrementalUpdateType   = 1;
};

enum ProductGroup
{
   FXProductGroup = 0;
   XBTProductGroup = 1;
   CCProductGroup = 2;
}

message UpdateHeader
{
   UpdateType type = 1;
   bytes data = 2;
};

message ProductHistoryInfo
{
   string name = 1;
   PriceInfo sell_price = 2;
   PriceInfo buy_price = 3;
   PriceInfo last_price = 4;
   double    volume = 5;
};

message FullSnapshot
{
   repeated ProductHistoryInfo fx_products = 1;
   repeated ProductHistoryInfo xbt_products = 2;
   repeated ProductHistoryInfo cc_products = 3;
};

message IncrementalUpdate
{
   ProductGroup group = 1;
   ProductHistoryInfo update_info = 2;
}